--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "nock": "^13.5.4",
     "node-cron": "^3.0.3",
-    "node-html-to-image": "^4.0.0",
+    "node-html-to-image": "^3.4.0",
+    "sqlite3": "^5.1.7",
     "winston": "^3.13.0"
   }
 }
